--- a/cmd/curio/internal/translations/locales/zh/messages.gotext.json
+++ b/cmd/curio/internal/translations/locales/zh/messages.gotext.json
@@ -315,7 +315,307 @@
                     "expr": "step"
                 }
             ]
-        }
+        },
+        {
+            "id": "This interactive tool migrates lotus-miner to Curio in 5 minutes.",
+            "translation": "这个交互式工具可以在5分钟内将lotus-miner迁移到Curio。",
+            "message": "This interactive tool migrates lotus-miner to Curio in 5 minutes.",
+            "placeholder": null
+          },
+          {
+            "id": "Each step needs your confirmation and can be reversed. Press Ctrl+C to exit at any time.",
+            "translation": "每一步都需要您的确认，并且可以撤销。随时按Ctrl+C退出。",
+            "message": "Each step needs your confirmation and can be reversed. Press Ctrl+C to exit at any time.",
+            "placeholder": null
+          },
+          {
+            "id": "Use the arrow keys to navigate: ↓ ↑ → ←",
+            "translation": "使用箭头键进行导航：↓ ↑ → ←",
+            "message": "Use the arrow keys to navigate: ↓ ↑ → ←",
+            "placeholder": null
+          },
+          {
+            "id": "Lotus-Miner to Curio Migration.",
+            "translation": "Lotus-Miner到Curio迁移。",
+            "message": "Lotus-Miner to Curio Migration.",
+            "placeholder": null
+          },
+          {
+            "id": "Try the web interface with  for further guided improvements.",
+            "translation": "尝试使用网页界面进行进一步的指导改进。",
+            "message": "Try the web interface with  for further guided improvements.",
+            "placeholder": null
+          },
+          {
+            "id": "You can now migrate your market node ({Boost}), if applicable.",
+            "translation": "如果适用，您现在可以迁移您的市场节点({Boost})。",
+            "message": "You can now migrate your market node ({Boost}), if applicable.",
+            "placeholder": null
+          },
+          {
+            "id": "Migrating config.toml to database.",
+            "translation": "正在将config.toml迁移到数据库。",
+            "message": "Migrating config.toml to database.",
+            "placeholder": null
+          },
+          {
+            "id": "Error reading from database: {Error}. Aborting Migration.",
+            "translation": "读取数据库时出错：{Error}。正在中止迁移。",
+            "message": "Error reading from database: {Error}. Aborting Migration.",
+            "placeholder": null
+          },
+          {
+            "id": "cannot read API: {Error}. Aborting Migration",
+            "translation": "无法读取API：{Error}。正在中止迁移",
+            "message": "cannot read API: {Error}. Aborting Migration",
+            "placeholder": null
+          },
+          {
+            "id": "Error saving config to layer: {Error}. Aborting Migration",
+            "translation": "保存配置到层时出错：{Error}。正在中止迁移",
+            "message": "Error saving config to layer: {Error}. Aborting Migration",
+            "placeholder": null
+          },
+          {
+            "id": "Protocol Labs wants to improve the software you use. Tell the team you're using Curio.",
+            "translation": "Protocol Labs希望改进您使用的软件。告诉团队您正在使用Curio。",
+            "message": "Protocol Labs wants to improve the software you use. Tell the team you're using Curio.",
+            "placeholder": null
+          },
+          {
+            "id": "Select what you want to share with the Curio team.",
+            "translation": "选择您想与Curio团队分享的内容。",
+            "message": "Select what you want to share with the Curio team.",
+            "placeholder": null
+          },
+          {
+            "id": "Individual Data: Miner ID, Curio version, net ({Mainnet} or {Testnet}). Signed.",
+            "translation": "个人数据：矿工ID、Curio版本、网络({Mainnet}或{Testnet})。已签名。",
+            "message": "Individual Data: Miner ID, Curio version, net ({Mainnet} or {Testnet}). Signed.",
+            "placeholder": null
+          },
+          {
+            "id": "Aggregate-Anonymous: version, net, and Miner power (bucketed).",
+            "translation": "聚合-匿名：版本、网络和矿工功率（分桶）。",
+            "message": "Aggregate-Anonymous: version, net, and Miner power (bucketed).",
+            "placeholder": null
+          },
+          {
+            "id": "Hint: I am someone running Curio on net.",
+            "translation": "提示：我是在网络上运行Curio的人。",
+            "message": "Hint: I am someone running Curio on net.",
+            "placeholder": null
+          },
+          {
+            "id": "Nothing.",
+            "translation": "没有。",
+            "message": "Nothing.",
+            "placeholder": null
+          },
+          {
+            "id": "Aborting remaining steps.",
+            "translation": "中止剩余步骤。",
+            "message": "Aborting remaining steps.",
+            "placeholder": null
+          },
+          {
+            "id": "Error connecting to lotus node: {Error}",
+            "translation": "连接到莲花节点时出错：{Error}",
+            "message": "Error connecting to lotus node: {Error}",
+            "placeholder": null
+          },
+          {
+            "id": "Error getting miner power: {Error}",
+            "translation": "获取矿工功率时出错：{Error}",
+            "message": "Error getting miner power: {Error}",
+            "placeholder": null
+          },
+          {
+            "id": "Error marshalling message: {Error}",
+            "translation": "整理消息时出错：{Error}",
+            "message": "Error marshalling message: {Error}",
+            "placeholder": null
+          },
+          {
+            "id": "Error getting miner info: {Error}",
+            "translation": "获取矿工信息时出错：{Error}",
+            "message": "Error getting miner info: {Error}",
+            "placeholder": null
+          },
+          {
+            "id": "Error signing message: {Error}",
+            "translation": "签署消息时出错：{Error}",
+            "message": "Error signing message: {Error}",
+            "placeholder": null
+          },
+          {
+            "id": "Error sending message: {Error}",
+            "translation": "发送消息时出错：{Error}",
+            "message": "Error sending message: {Error}",
+            "placeholder": null
+          },
+          {
+            "id": "Error sending message: Status {Status}, Message:",
+            "translation": "发送消息时出错：状态{Status}，消息：",
+            "message": "Error sending message: Status {Status}, Message:",
+            "placeholder": null
+          },
+          {
+            "id": "Message sent.",
+            "translation": "消息已发送。",
+            "message": "Message sent.",
+            "placeholder": null
+          },
+          {
+            "id": "Documentation:",
+            "translation": "文档：",
+            "message": "Documentation:",
+            "placeholder": null
+          },
+          {
+            "id": "The '{Base}' layer stores common configuration. All curio instances can include it in their {__layers} argument.",
+            "translation": "'{Base}'层存储通用配置。所有Curio实例都可以在其{__layers}参数中包含它。",
+            "message": "The '{Base}' layer stores common configuration. All curio instances can include it in their {__layers} argument.",
+            "placeholder": null
+          },
+          {
+            "id": "You can add other layers for per-machine configuration changes.",
+            "translation": "您可以添加其他层进行每台机器的配置更改。",
+            "message": "You can add other layers for per-machine configuration changes.",
+            "placeholder": null
+          },
+          {
+            "id": "Join {Fil_curio_help} in Filecoin {Slack} for help.",
+            "translation": "加入Filecoin {Slack}中的{Fil_curio_help}寻求帮助。",
+            "message": "Join {Fil_curio_help} in Filecoin {Slack} for help.",
+            "placeholder": null
+          },
+          {
+            "id": "Join {Fil_curio_dev} in Filecoin {Slack} to follow development and feedback!",
+            "translation": "加入Filecoin {Slack}中的{Fil_curio_dev}来跟踪开发和反馈！",
+            "message": "Join {Fil_curio_dev} in Filecoin {Slack} to follow development and feedback!",
+            "placeholder": null
+          },
+          {
+            "id": "Want PoST redundancy? Run many Curio instances with the '{Post}' layer.",
+            "translation": "需要PoST冗余？使用'{Post}'层运行多个Curio实例。",
+            "message": "Want PoST redundancy? Run many Curio instances with the '{Post}' layer.",
+            "placeholder": null
+          },
+          {
+            "id": "Point your browser to your web GUI to complete setup with {Boost} and advanced featues.",
+            "translation": "将您的浏览器指向您的网络GUI，以使用{Boost}和高级功能完成设置。",
+            "message": "Point your browser to your web GUI to complete setup with {Boost} and advanced featues.",
+            "placeholder": null
+          },
+          {
+            "id": "For SPs with multiple Miner IDs, run 1 migration per lotus-miner all to the same 1 database. The cluster will serve all Miner IDs.",
+            "translation": "对于具有多个矿工ID的SP，针对所有lotus-miner运行1次迁移到同一个数据库。集群将服务所有矿工ID。",
+            "message": "For SPs with multiple Miner IDs, run 1 migration per lotus-miner all to the same 1 database. The cluster will serve all Miner IDs.",
+            "placeholder": null
+          },
+          {
+            "id": "Please start {Lotus_miner} now that database credentials are in {Toml}.",
+            "translation": "现在数据库凭证在{Toml}中，请启动{Lotus_miner}。",
+            "message": "Please start {Lotus_miner} now that database credentials are in {Toml}.",
+            "placeholder": null
+          },
+          {
+            "id": "Waiting for {Lotus_miner} to write sectors into Yugabyte.",
+            "translation": "等待{Lotus_miner}将扇区写入Yugabyte。",
+            "message": "Waiting for {Lotus_miner} to write sectors into Yugabyte.",
+            "placeholder": null
+          },
+          {
+            "id": "The sectors are in the database. The database is ready for {Curio}.",
+            "translation": "扇区在数据库中。数据库已准备好用于{Curio}。",
+            "message": "The sectors are in the database. The database is ready for {Curio}.",
+            "placeholder": null
+          },
+          {
+            "id": "Now shut down lotus-miner and move the systems to {Curio}.",
+            "translation": "现在关闭lotus-miner并将系统移至{Curio}。",
+            "message": "Now shut down lotus-miner and move the systems to {Curio}.",
+            "placeholder": null
+          },
+          {
+            "id": "Press return to continue",
+            "translation": "按回车继续",
+            "message": "Press return to continue",
+            "placeholder": null
+          },
+          {
+            "id": "Aborting migration.",
+            "translation": "中止迁移。",
+            "message": "Aborting migration.",
+            "placeholder": null
+          },
+          {
+            "id": "Sectors verified. {I} sector locations found.",
+            "translation": "扇区已验证。发现了{I}个扇区位置。",
+            "message": "Sectors verified. {I} sector locations found.",
+            "placeholder": null
+          },
+          {
+            "id": "Press return to update {Toml} with Yugabyte info. Backup the file now.",
+            "translation": "按回车更新{Toml}以获取Yugabyte信息。现在备份文件。",
+            "message": "Press return to update {Toml} with Yugabyte info. Backup the file now.",
+            "placeholder": null
+          },
+          {
+            "id": "To start, ensure your sealing pipeline is drained and shut-down lotus-miner.",
+            "translation": "开始之前，请确保您的密封管道已排空并关闭lotus-miner。",
+            "message": "To start, ensure your sealing pipeline is drained and shut-down lotus-miner.",
+            "placeholder": null
+          },
+          {
+            "id": "Enter the path to the configuration directory used by {Lotus_miner}",
+            "translation": "输入{Lotus_miner}使用的配置目录的路径",
+            "message": "Enter the path to the configuration directory used by {Lotus_miner}",
+            "placeholder": null
+          },
+          {
+            "id": "Step Complete: {Step}",
+            "translation": "步骤完成：{Step}",
+            "message": "Step Complete: {Step}",
+            "placeholder": null
+          },
+          {
+            "id": "Configuration 'base' was updated to include this miner's address and its wallet setup.",
+            "translation": "配置'base'已更新，包含了这个矿工的地址和其钱包设置。",
+            "message": "Configuration 'base' was updated to include this miner's address and its wallet setup.",
+            "placeholder": null
+          },
+          {
+            "id": "Compare the configurations {Base} to {MinerAddresses0}. Changes between the miner IDs other than wallet addreses should be a new, minimal layer for runners that need it.",
+            "translation": "比较配置{Base}和{MinerAddresses0}。矿工ID之间除了钱包地址的变化应该是需要的运行者的一个新的、最小的层。",
+            "message": "Compare the configurations {Base} to {MinerAddresses0}. Changes between the miner IDs other than wallet addreses should be a new, minimal layer for runners that need it.",
+            "placeholder": null
+          },
+          {
+            "id": "Configuration 'base' was created to include this miner's address and its wallet setup.",
+            "translation": "配置'base'已创建，包括了这个矿工的地址和其钱包设置。",
+            "message": "Configuration 'base' was created to include this miner's address and its wallet setup.",
+            "placeholder": null
+          },
+          {
+            "id": "Layer {LayerName} created.",
+            "translation": "层{LayerName}已创建。",
+            "message": "Layer {LayerName} created.",
+            "placeholder": null
+          },
+          {
+            "id": "To work with the config: \\n",
+            "translation": "要使用配置：\\n",
+            "message": "To work with the config: \\n",
+            "placeholder": null
+          },
+          {
+            "id": "To run Curio: With machine or cgroup isolation, use the command (with example layer selection):",
+            "translation": "运行Curio：使用机器或cgroup隔离，使用命令（附带示例层选择）：",
+            "message": "To run Curio: With machine or cgroup isolation, use the command (with example layer selection):",
+            "placeholder": null
+          }
     ]
     
 }
