--- a/cmd/curio/internal/translations/locales/zh/messages.gotext.json
+++ b/cmd/curio/internal/translations/locales/zh/messages.gotext.json
@@ -699,6 +699,306 @@
       "translation": "要使用配置：",
       "message": "To work with the config:",
       "placeholder": null
+    },
+    {
+      "id": "This interactive tool creates a new miner actor and creates the basic configuration layer for it.",
+      "translation": "此交互式工具将创建一个新的矿工角色，并为其创建基本配置层。",
+      "message": "This interactive tool creates a new miner actor and creates the basic configuration layer for it.",
+      "placeholder": null
+    },
+    {
+      "id": "This process is partially idempotent. Once a new miner actor has been created and subsequent steps fail, the user need to run 'curio config new-cluster {Arg_1}' to finish the configuration.",
+      "translation": "此过程在某种程度上是幂等的。一旦创建了新的矿工角色，并且后续步骤失败，用户需要运行'curio config new-cluster {Arg_1}'来完成配置。",
+      "message": "This process is partially idempotent. Once a new miner actor has been created and subsequent steps fail, the user need to run 'curio config new-cluster {Arg_1}' to finish the configuration.",
+      "placeholder": null
+    },
+    {
+      "id": "Choose if you with to create a new miner or migrate from existing Lotus-Miner",
+      "translation": "选择您是否要创建新矿工或从现有的 Lotus-Miner 迁移",
+      "message": "Choose if you with to create a new miner or migrate from existing Lotus-Miner",
+      "placeholder": null
+    },
+    {
+      "id": "Migrate from existing Lotus-Miner",
+      "translation": "从现有的 Lotus-Miner 迁移",
+      "message": "Migrate from existing Lotus-Miner",
+      "placeholder": null
+    },
+    {
+      "id": "Create a new miner",
+      "translation": "创建一个新的矿工",
+      "message": "Create a new miner",
+      "placeholder": null
+    },
+    {
+      "id": "New Miner initialization complete.",
+      "translation": "新矿工初始化完成。",
+      "message": "New Miner initialization complete.",
+      "placeholder": null
+    },
+    {
+      "id": "Migrating lotus-miner config.toml to Curio in-database configuration.",
+      "translation": "将 lotus-miner config.toml 迁移到 Curio 的数据库配置中。",
+      "message": "Migrating lotus-miner config.toml to Curio in-database configuration.",
+      "placeholder": null
+    },
+    {
+      "id": "Error getting API: {Error}",
+      "translation": "获取 API 时出错：{Error}",
+      "message": "Error getting API: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "The Curio team wants to improve the software you use. Tell the team you're using `{Curio}`.",
+      "translation": "Curio 团队希望改进您使用的软件。告诉团队您正在使用 `{Curio}`。",
+      "message": "The Curio team wants to improve the software you use. Tell the team you're using `{Curio}`.",
+      "placeholder": null
+    },
+    {
+      "id": "Individual Data: Miner ID, Curio version, chain ({Mainnet} or {Calibration}). Signed.",
+      "translation": "个人数据：矿工 ID，Curio 版本，链（{Mainnet} 或 {Calibration}）。签名。",
+      "message": "Individual Data: Miner ID, Curio version, chain ({Mainnet} or {Calibration}). Signed.",
+      "placeholder": null
+    },
+    {
+      "id": "Aggregate-Anonymous: version, chain, and Miner power (bucketed).",
+      "translation": "聚合-匿名：版本，链和矿工算力（分桶）。",
+      "message": "Aggregate-Anonymous: version, chain, and Miner power (bucketed).",
+      "placeholder": null
+    },
+    {
+      "id": "Hint: I am someone running Curio on whichever chain.",
+      "translation": "提示：我是在任何链上运行 Curio 的人。",
+      "message": "Hint: I am someone running Curio on whichever chain.",
+      "placeholder": null
+    },
+    {
+      "id": "Press return to update {Toml} with Yugabyte info. A Backup file will be written to that folder before changes are made.",
+      "translation": "按回车键更新 {Toml} 以包含 Yugabyte 信息。在进行更改之前，将在该文件夹中写入备份文件。",
+      "message": "Press return to update {Toml} with Yugabyte info. A Backup file will be written to that folder before changes are made.",
+      "placeholder": null
+    },
+    {
+      "id": "Error creating backup file: {Error}",
+      "translation": "创建备份文件时出错：{Error}",
+      "message": "Error creating backup file: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Error reading config.toml: {Error}",
+      "translation": "读取 config.toml 时出错：{Error}",
+      "message": "Error reading config.toml: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Error writing backup file: {Error}",
+      "translation": "写入备份文件时出错：{Error}",
+      "message": "Error writing backup file: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Error closing backup file: {Error}",
+      "translation": "关闭备份文件时出错：{Error}",
+      "message": "Error closing backup file: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Initializing a new miner actor.",
+      "translation": "初始化新的矿工角色。",
+      "message": "Initializing a new miner actor.",
+      "placeholder": null
+    },
+    {
+      "id": "Enter the info to create a new miner",
+      "translation": "输入创建新矿工所需的信息",
+      "message": "Enter the info to create a new miner",
+      "placeholder": null
+    },
+    {
+      "id": "Owner Address: {String}",
+      "translation": "所有者地址：{String}",
+      "message": "Owner Address: {String}",
+      "placeholder": null
+    },
+    {
+      "id": "Worker Address: {String}",
+      "translation": "工作地址：{String}",
+      "message": "Worker Address: {String}",
+      "placeholder": null
+    },
+    {
+      "id": "Sender Address: {String}",
+      "translation": "发送者地址：{String}",
+      "message": "Sender Address: {String}",
+      "placeholder": null
+    },
+    {
+      "id": "Sector Size: {Ssize}",
+      "translation": "扇区大小: {Ssize}",
+      "message": "Sector Size: {Ssize}",
+      "placeholder": null
+    },
+    {
+      "id": "Confidence epochs: {Confidence}",
+      "translation": "置信度时期: {Confidence}",
+      "message": "Confidence epochs: {Confidence}",
+      "placeholder": null
+    },
+    {
+      "id": "Continue to verify the addresses and create a new miner actor.",
+      "translation": "继续验证地址并创建新的矿工角色。",
+      "message": "Continue to verify the addresses and create a new miner actor.",
+      "placeholder": null
+    },
+    {
+      "id": "Miner creation error occurred: {Error}",
+      "translation": "矿工创建错误发生: {Error}",
+      "message": "Miner creation error occurred: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Enter the owner address",
+      "translation": "输入所有者地址",
+      "message": "Enter the owner address",
+      "placeholder": null
+    },
+    {
+      "id": "No address provided",
+      "translation": "未提供地址",
+      "message": "No address provided",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to parse the address: {Error}",
+      "translation": "解析地址失败: {Error}",
+      "message": "Failed to parse the address: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Enter {Stringworker_senderi_1} address",
+      "translation": "输入 {Stringworker_senderi_1} 地址",
+      "message": "Enter {Stringworker_senderi_1} address",
+      "placeholder": null
+    },
+    {
+      "id": "Enter the sector size",
+      "translation": "输入扇区大小",
+      "message": "Enter the sector size",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to parse sector size: {Error}",
+      "translation": "解析扇区大小失败: {Error}",
+      "message": "Failed to parse sector size: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Enter the confidence",
+      "translation": "输入置信度",
+      "message": "Enter the confidence",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to parse confidence: {Error}",
+      "translation": "解析置信度失败: {Error}",
+      "message": "Failed to parse confidence: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to create the miner actor: {Error}",
+      "translation": "创建矿工角色失败: {Error}",
+      "message": "Failed to create the miner actor: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Miner {String} created successfully",
+      "translation": "矿工 {String} 创建成功",
+      "message": "Miner {String} created successfully",
+      "placeholder": null
+    },
+    {
+      "id": "Cannot reach the DB: {Error}",
+      "translation": "无法访问数据库: {Error}",
+      "message": "Cannot reach the DB: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Error connecting to full node API: {Error}",
+      "translation": "连接到完整节点 API 时发生错误: {Error}",
+      "message": "Error connecting to full node API: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Pre-initialization steps complete",
+      "translation": "预初始化步骤完成",
+      "message": "Pre-initialization steps complete",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to generate random bytes for secret: {Error}",
+      "translation": "生成密码的随机字节失败: {Error}",
+      "message": "Failed to generate random bytes for secret: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Please do not run guided-setup again as miner creation is not idempotent. You need to run 'curio config new-cluster {String}' to finish the configuration",
+      "translation": "请不要再次运行引导设置，因为矿工创建不是幂等的。 您需要运行 'curio config new-cluster {String}' 来完成配置。",
+      "message": "Please do not run guided-setup again as miner creation is not idempotent. You need to run 'curio config new-cluster {String}' to finish the configuration",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to get API info for FullNode: {Err}",
+      "translation": "无法获取 FullNode 的 API 信息: {Err}",
+      "message": "Failed to get API info for FullNode: {Err}",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to verify the auth token from daemon node: {Error}",
+      "translation": "无法验证来自守护进程节点的授权令牌: {Error}",
+      "message": "Failed to verify the auth token from daemon node: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to encode the config: {Error}",
+      "translation": "无法编码配置: {Error}",
+      "message": "Failed to encode the config: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to generate default config: {Error}",
+      "translation": "无法生成默认配置: {Error}",
+      "message": "Failed to generate default config: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to insert 'base' config layer in database: {Error}",
+      "translation": "无法将 'base' 配置层插入数据库: {Error}",
+      "message": "Failed to insert 'base' config layer in database: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "Failed to insert '{String}' config layer in database: {Error}",
+      "translation": "无法将 '{String}' 配置层插入数据库: {Error}",
+      "message": "Failed to insert '{String}' config layer in database: {Error}",
+      "placeholder": null
+    },
+    {
+      "id": "New Curio configuration layer '{String}' created",
+      "translation": "新的 Curio 配置层 '{String}' 已创建",
+      "message": "New Curio configuration layer '{String}' created",
+      "placeholder": null
+    },
+    {
+      "id": "This process is partially idempotent. Once a new miner actor has been created and subsequent steps fail, the user need to run 'curio config new-cluster \u003c miner ID \u003e' to finish the configuration.",
+      "translation": "该过程部分幂等。一旦创建了新的矿工角色，并且随后的步骤失败，用户需要运行 'curio config new-cluster \u003c 矿工 ID \u003e' 来完成配置。",
+      "message": "This process is partially idempotent. Once a new miner actor has been created and subsequent steps fail, the user need to run 'curio config new-cluster \u003c miner ID \u003e' to finish the configuration.",
+      "placeholder": null
+    },
+    {
+      "id": "Confidence epochs",
+      "translation": "置信度时期",
+      "message": "Confidence epochs",
+      "placeholder": null
     }
   ]
 }
