--- a/cmd/curio/internal/translations/locales/ko/messages.gotext.json
+++ b/cmd/curio/internal/translations/locales/ko/messages.gotext.json
@@ -1029,6 +1029,12 @@
             "translation": "신뢰 에포크",
             "message": "Confidence epochs",
             "placeholder": null
+        },
+        {
+            "id": "Increase reliability using redundancy: start multiple machines with at-least the post layer: 'curio run --layers=post'",
+            "translation": "신뢰성 향상을 위한 중복성 사용: 적어도 post 레이어를 사용하여 여러 대의 기계를 시작하십시오: 'curio run --layers=post'",
+            "message": "Increase reliability using redundancy: start multiple machines with at-least the post layer: 'curio run --layers=post'",
+            "placeholder": null
         }
     ]
 }
